--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>To do list</title>
-  </head>
-  <body>
-    <h1>It's a <%= kindOfDay %>!</h1>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>To do list</title>
+</head>
+
+<body>
+  <!-- with the ejs marker we wouldn't be able to do this <% %> is for the javascript
+  <%= %> is for the html-->
+  <% if (kindOfDay === "Thursday") { %>
+  <h1 style="color: purple"><%= kindOfDay %> ToDo List</h1>
+  <% } else { %>
+  <h1 style="color: blue"><%= kindOfDay %> ToDo List</h1>
+  <% } %>
+</body>
+
 </html>
