--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,11 +9,25 @@
 <body>
   <!-- with the ejs marker we wouldn't be able to do this <% %> is for the javascript
   <%= %> is for the html-->
-  <% if (kindOfDay === "Thursday") { %>
-  <h1 style="color: purple"><%= kindOfDay %> ToDo List</h1>
-  <% } else { %>
-  <h1 style="color: blue"><%= kindOfDay %> ToDo List</h1>
-  <% } %>
+<h1> <%= kindOfDay %> </h1>
+
+<ul>
+  
+<% for (var i=0; i<newListItems.length; i++) { %>
+  <li><%= newListItems[i] %></li>
+<% } %>
+
+</ul>
+
+<form class="" action="/" method="post">
+
+  <input type="text" name="newItem">
+
+  <button type="submit" name="button">Add</button>
+
+</form>
+
+
 </body>
 
 </html>
